    - Fixed many spelling errors across the Changelog.
    - Recipe issues from 1.1 (mod version 0.2.xx)
    - Added Nanobots Refined to the compatibility. Made the old ones incompatible.
    - Wrong mod required regards to resistances.
    - Reverse factory: Having the mods as dependency by mistake. Caused some load order mishaps.
  Credits:
    - Thanks @MetroidManiax Noticing wrong bobs mod listed.
    - Thanks @Pez for helping solving Recycling across my mod.
    - Thanks @DarkMamaba For providing me with new Armour Tech & Recipe Icon Textures for Mk6-7.
  Info:
    - Note that this version are not fully finished & beta versions are available at my discord server.
    - Your are welcome to try it and give feedback on what's there. I don't want reports about uncompleted Features. (Example: the settings are missing)
    - this INFO will be mark over when the official 0.4 is done.
---------------------------------------------------------------------------------------------------
Version: 0.3.18
Date: 12.03.2025
  Features:
    - Repeatable migrations.
  Changes:
    - Moved disable function: Filter, Recipe, Tech. To Chemical mod.
    - Removed Redundant settings.
    - Improved tips description on some mods.
  Modding:
    - Fixed missing item in roboport recipe (boblogiostics).
    - Added item to armour recipes (bobplate, bobenemies).
    - bob- Prefix Crashing with beta (11.03.25).
  Bugfixes:
    - Crashes with bobs in general. (11.03.25).
  Info:
    - Mistakenly deleted & reuploaded. 21.05.2025
---------------------------------------------------------------------------------------------------
Version: 0.3.17
Date: 04.03.2025
  Features:
    - Repeatable migrations.
    - Added all the old chat popups to tips & tricks. some text changes may happen as the mods updates.  
  Changes:
    - Achievement name change [Surviving planet destruction] --> [Leviathan]
    - Control stage code are deleted, no longer in use/needed.